Fix max-width for large photos.
Will prevent them overflowing on mobile.

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -31,5 +31,6 @@
   img {
     display: block;
     margin: auto;
+    max-width: 100%;
   }
 }
